--- a/Personal Information.html
+++ b/Personal Information.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Personal Information</title>
+    <link rel="stylesheet" href="CSS/Styles.css">
   </head>
   <body>
-    <h3>Persona Information</h3>
+    <h3>Personal Information</h3>
     <ul>
       <li><strong>Phone:</strong> (+506) 8308-0547</li>
       <li><strong>Email:</strong> dejivi.27@gmail.com</li>
