--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Daniel's Personal Site</title>
+  <link rel="stylesheet" href="CSS/Styles.css">
+
 </head>
 
 <body>
@@ -11,7 +13,7 @@
     <tr>
       <td><img src="Images/Daniel.png" alt="Daniel Jiménez Villalobos" width="200"></td>
       <td>
-        <h1><a href="Personal Information.html">Daniel Jiménez Villalobos</a></h1>
+        <h1 class="My_Name"><a class="My_Name" href="Personal Information.html">Daniel Jiménez Villalobos</a></h1>
         <p><em>Electrical engineer</em></p>
       </td>
     </tr>
@@ -19,7 +21,10 @@
   <br>
   <p>Graduate from University of Costa Rica. My objective is to get a position in the electrical engineering area
     in order to obtain work experience and to develop the skills acquired in my years in the university. As a hobbie I love listening to <a href="Music.html">music</a> </p>
-  <hr size="3" noshade>
+  <p>
+     If you want to contact me, please click in my name.
+  </p>
+  <hr>
 
   <h2>Academical Projects</h2>
   <h3>Electrical project</h3>
@@ -36,7 +41,7 @@
   <p>Electric machines, power electronics, digital
     circuits and control systems.
     Programation skills: C, Matlab, Python.</p>
-  <hr size="3" noshade>
+  <hr>
   <h2>Experience</h2>
   <h3>Granittore</h3>
   <p>Worked as a refrigeration technicician fixing and giving
@@ -49,7 +54,7 @@
     created an excel table with the information needed of the
     electrical network in order to fix the distribution protections
     that aren't well coordinated.</p>
-  <hr size="3" noshade>
+  <hr>
 
   <h2>Education</h2>
   <table>
@@ -75,7 +80,7 @@
   </table>
 
 
-  <hr size="3" noshade>
+  <hr>
   <h2>Soft Skills</h2>
   <ul>
     <li>Great with communication</li>
@@ -89,39 +94,39 @@
     <li> <strong>High Intermediate</strong> </li>
   </ol>
 
-<hr size="3" noshade>
+  <hr>
 
-<h2>Programming Skills</h2>
-<table cellspacing="10">
-  <thead>
-    <tr>
-      <th>Language</th>
-      <th>Rank</th>
-      <th>Language</th>
-      <th>Rank</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>C</td>
-      <td>⭐️⭐️⭐️⭐️</td>
-      <td>HTML</td>
-      <td>⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Matlab</td>
-      <td>⭐️⭐️⭐️</td>
-      <td>CSS</td>
-      <td>⭐️</td>
-    </tr>
-    <tr>
-      <td>Latex</td>
-      <td>⭐️⭐️⭐️⭐️</td>
-      <td>Python</td>
-      <td>⭐️⭐️</td>
-    </tr>
-  </tbody>
-</table>
+  <h2>Programming Skills</h2>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Language</th>
+        <th>Rank</th>
+        <th>Language</th>
+        <th>Rank</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>C</td>
+        <td>⭐️⭐️⭐️⭐️</td>
+        <td>HTML</td>
+        <td>⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Matlab</td>
+        <td>⭐️⭐️⭐️</td>
+        <td>CSS</td>
+        <td>⭐️</td>
+      </tr>
+      <tr>
+        <td>Latex</td>
+        <td>⭐️⭐️⭐️⭐️</td>
+        <td>Python</td>
+        <td>⭐️⭐️</td>
+      </tr>
+    </tbody>
+  </table>
 
 
 </body>
